--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h1>МАГАЗИН МЕРЧА</h2>
 		<h1>ДОБАВИТЬ ОПЛАТУ</h2>
 		<h1>КАТАЛОГ НАШЕГО МЕРЧА</h2>
+		<h1>НОВОСТИ</h2>
 		<div>Избранное</div>>
 
 		<div class="item">
